kubernetes/apps/matrix/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    pod-security.kubernetes.io/enforce: restricted
