kubernetes/apps/matrix/cinny.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cinny
  namespace: matrix
  labels:
    app.kubernetes.io/name: cinny
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cinny
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinny
  namespace: matrix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cinny
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cinny
    spec:
      containers:
        - name: cinny
          # renovate: datasource=docker depName=ghcr.io/cinnyapp/cinny
          image: ghcr.io/cinnyapp/cinny:v4.12.2
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config.json
              subPath: config.json
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { cpu: 200m, memory: 128Mi }
      volumes:
        - name: config
          configMap:
            name: cinny-config
