kubernetes/apps/matrix/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
  namespace: matrix
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-merry-wildcard
  hostnames:
    - matrix.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: synapse
          port: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element
  namespace: matrix
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-merry-wildcard
  hostnames:
    - element.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: element
          port: 80
